create backend to control robot on orders

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-/blockly/
-/JS-Interpreter/
+.env
+www/blockly/
+www/JS-Interpreter/
+vendor/
+var/cache/*
+var/logs/*
+!var/cache/.gitkeep
+!var/logs/.gitkeep
+composer.lock
+docker-compose.override.yml
